# facial-landmarks

./: .gitignore  README.md  main.py  pyproject.toml
.bonsai/: Bonsai.config
.config/: dotnet-tools.json
facial_landmarks/: face_detector.py  facial_processor.py  landmark_detector.py  main.py  utils.py
schemas/: facial_analysis_output.json  processing_config.json
scripts/: demo_enhanced_landmarks.py  example.py
tests/: conftest.py  test_face_detector.py  test_facial_processor.py  test_integration.py  test_landmark_detector.py  test_main.py  test_utils.py
workflows/: DetectFaceInImageTest.bonsai  Extensions.csproj  FileCaptureTest.bonsai  PythonRuntimeTest.bonsai
workflows/Extensions/: FacialAnalysisOutput.cs  FacialAnalysisOutputImageOverlay.cs  FacialAnalysisOutputVisualizer.cs  ProcessingConfig.cs
