[project]
name = "facial-landmarks"
version = "0.1.0"
description = "Fast facial detection and facial landmark detection with real-time inference capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "pytest>=8.4.0",
    "pythonnet>=3.0.5",
    "pydantic>=2.11.5",
    "jsonschema>=4.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
facial-landmarks = { workspace = true }

[dependency-groups]
dev = [
    "facial-landmarks",
]

[project.scripts]
facial-landmarks = "facial_landmarks.main:main"
